@@ -5,6 +5,12 @@ Provides some base exception classes.
 """
 
 # ---------------------------------------------------------------------------
+# Exports
+# ---------------------------------------------------------------------------
+
+__all__ = ['ExceptionWithMessage']
+
+# ---------------------------------------------------------------------------
 # Classes
 # ---------------------------------------------------------------------------
 
