@@ -92,8 +92,10 @@ import urlparse
 import grizzled.exception
 
 # ---------------------------------------------------------------------------
-# Constants
+# Exports
 # ---------------------------------------------------------------------------
+
+__all__ = ['IncludeError', 'Includer', 'preprocess']
 
 # ---------------------------------------------------------------------------
 # Logging
