@@ -2,6 +2,11 @@ $Id$
 
 Version 0.5 (...)
 
+- Added grizzled.file.universal_path() and grizzled.file.native_path().
+  A universal path always uses a '/' as the file separator, no matter what
+  the underlying operating system uses. A native path uses the underlying
+  operating system's path separator. These two functions convert between the
+  two notations.
 - Fixed bug in grizzled.file.eglob() stemming from camel case conversion.
 - Added grizzled.os.file_separator() function.
 - Changed grizzled.os.get_path_separator() to grizzled.os.path_separator().
